2012-07-12         Arnold D. Robbins     <arnold@skeeve.com>

	Allow creation of constants. Thanks to John Haque for the
	implementation concept.

	* gawk_api.h (api_sym_constant): Create a constant.
	* gawk_api.h (api_sym_update_real): Renamed from api_sym_update.
	Add is_const paramater and do the right thing if true.
	(api_sym_update, api_sym_constant): Call api_sym_update_real
	in the correct way.
	(set_constant): New function.

2012-07-11         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawkapi.h: Fix typo in comment.
	(awk_value_t): Type for scalar_cookie should be awk_scalar_t,
	not awk_array_t.
	(gawk_api): Add new api_sym_lookup_scalar function.
	(sym_lookup_scalar): New wrapper macro for api_sym_lookup_scalar hook.
	* gawkapi.c (api_sym_lookup_scalar): New function for faster scalar
	lookup.
	(api_impl): Add entry for api_sym_lookup_scalar.

2012-07-11         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawkapi.c (awk_value_to_node): Change to a switch statement
	so AWK_SCALAR or other invalid type is handled properly.
	(valid_subscript_type): Test whether a value type is acceptable
	for use as an array subscript (any scalar value will do).
	(api_get_array_element, api_set_array_element, api_del_array_element):
	Use new valid_subscript_type instead of restricting to string values.

2012-07-11         Arnold D. Robbins     <arnold@skeeve.com>

	Lots of API work.

	* gawkapi.h: Function pointer members renamed api_XXXX and
	macros adjusted. More documentation.
	(awk_valtype_t): New AWK_SCALAR enum for scalar cookies.
	(awk_scalar_t): New type.
	(awk_value_t): New member scalar_cookie.
	(api_sym_update_scalar): New API function.
	(erealloc): New macro.
	(make_const_string): New macro, renamed from dup_string.
	(make_malloced_string): New macro, renamed from make_string.
	(make_null_string): New inline function.
	(dl_load_func): Add call to init routine through pointer if
	not NULL.
