@@ -1,3 +1,8 @@
+2012-07-16         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkapi.c (awk_value_to_node): Support AWK_SCALAR.
+	(api_sym_update_scalar): Performance improvements.
+
 2012-07-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Allow creation of constants. Thanks to John Haque for the
